2002-10-25  Sam Steingold  <sds@gnu.org>

	* eval.d (coerce_function): use fehler_function()
	* sequence.d (seq_boolop): ditto
	* symbol.d (%PUTD): ditto

2002-10-23  Sam Steingold  <sds@gnu.org>

	* loop.lisp (expand-loop): separated `startup-code' from
	`initially-code' so that INITIALLY clauses can access variables

2002-10-23  Arseny Slobodjuck <ampy@ich.dvo.ru>

	Bugfixing directory shortcuts on win32.
	* pathname.d (assure_dir_exists) [WIN32_NATIVE]:
	handle situation when dir exists but filename does not.
	(directory_search_scandir) [WIN32_NATIVE]: return symbolic
	name for nonexisting targets.

2002-10-22  Sam Steingold  <sds@gnu.org>

	* complete.lisp (completion): call DESCRIBE only if there was
	something typed and it is in the completions

2002-10-22  Sam Steingold  <sds@gnu.org>

	Make sure COMPILE-FILE-PATHNAME does not barf in SEARCH-FILE
	* init.lisp (search-file): pass :IF-DOES-NOT-EXIST :IGNORE to DIRECTORY
	* pathname.d (dir_search_if_none_t): added DIR_IF_NONE_IGNORE
	(directory_search_hashcode): never signal error, just return nullobj
	(directory_search_scandir): do not barf when DIR_IF_NONE_IGNORE,
	otherwise treat DIR_IF_NONE_IGNORE just like DIR_IF_NONE_DISCARD
	(directory_search): be more careful with subdirectories when
	DIR_IF_NONE_IGNORE
	(DIRECTORY): accept :IF-DOES-NOT-EXIST :IGNORE
	* constobj.d (type_directory_not_exist): added :IGNORE

2002-10-18  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-LABELS, c-GENERIC-LABELS): new macro ADD-FENV
	in their common MACROLET

2002-10-17  Sam Steingold  <sds@gnu.org>

	* debug.d (read_form): do not nreverse STACK_2 before binding
	SYS::*KEY-BINDINGS*, since this destructively modifies commandsr
	in reploop.lisp
	* reploop.lisp (help): avoid much consing by not calling REVERSE +
	REMOVE-IF-NOT, this also simplifies the logic everywhere and makes
	the help message appear in the same order for different invocations
	(break-loop): push the restart announcement onto commandsr